llvm/test/tools/llubi/inttoptr_gep.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

target datalayout = "e-p:64:64:64"

define void @main() {
  %alloc1 = alloca i32
  %alloc2 = alloca i32

  %addr1 = ptrtoint ptr %alloc1 to i64
  %addr2 = ptrtoint ptr %alloc2 to i64
  %ptrdiff1 = sub i64 %addr2, %addr1
  %ptrdiff2 = sub i64 %addr1, %addr2

  %p = inttoptr i64 %addr1 to ptr
  ; For out-of-bounds GEP with wildcard provenance, it returns poison.
  %gep_oob = getelementptr inbounds i8, ptr %p, i64 %ptrdiff1
  %gep1 = getelementptr i8, ptr %p, i64 %ptrdiff1
  %gep2 = getelementptr inbounds i8, ptr %gep1, i64 2
  %gep3 = getelementptr i8, ptr %gep2, i64 %ptrdiff2

  ; We cannot access %alloc1 because %gep2 has been resolved to %alloc2.
  store i16 0, ptr %gep3
  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT:   %alloc1 = alloca i32, align 4 => ptr 0x8 [alloc1]
; CHECK-NEXT:   %alloc2 = alloca i32, align 4 => ptr 0x10 [alloc2]
; CHECK-NEXT:   %addr1 = ptrtoint ptr %alloc1 to i64 => i64 8
; CHECK-NEXT:   %addr2 = ptrtoint ptr %alloc2 to i64 => i64 16
; CHECK-NEXT:   %ptrdiff1 = sub i64 %addr2, %addr1 => i64 8
; CHECK-NEXT:   %ptrdiff2 = sub i64 %addr1, %addr2 => i64 -8
; CHECK-NEXT:   %p = inttoptr i64 %addr1 to ptr => ptr 0x8 [wildcard]
; CHECK-NEXT:   %gep_oob = getelementptr inbounds i8, ptr %p, i64 %ptrdiff1 => poison
; CHECK-NEXT:   %gep1 = getelementptr i8, ptr %p, i64 %ptrdiff1 => ptr 0x10 [wildcard]
; CHECK-NEXT:   %gep2 = getelementptr inbounds i8, ptr %gep1, i64 2 => ptr 0x12 [alloc2 + 2]
; CHECK-NEXT:   %gep3 = getelementptr i8, ptr %gep2, i64 %ptrdiff2 => ptr 0xA [alloc2 + -6]
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   store i16 0, ptr %gep3, align 2 at @main <stdin>:23
; CHECK-NEXT: Immediate UB detected: Invalid memory access via a pointer with nullary provenance.
; CHECK-NEXT: error: Execution of function 'main' failed.
